syntax = "proto3";

option go_package = "prototest";

message ExampleMsg {
    string simple_string = 1;
    oneof complex_field {
        string some_string = 2;
        int64 some_number = 3;
        bool some_bool = 4;
    }
}
